Prevented example web image horizontal overflow

--- a/site/style.sass
+++ b/site/style.sass
@@ -286,3 +286,4 @@ p:before
 .structure-example
   display: block
   margin: 0 auto
+  max-width: 100%
